--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="title_register">Đăng ký</string>
     <string name="title_continue">Tiếp tục</string>
     <string name="title_password">Mật khẩu</string>
+    <string name="title_mycourse">Khoá học</string>
+    <string name="title_checkin">Điểm danh</string>
+    <string name="title_update">Cập nhật thông tin</string>
+    <string name="title_logout">Đăng xuất</string>
     <string name="title_confirm_password">Xác nhận mật khẩu</string>
     <string name="title_email">Email</string>
     <string name="title_name">Tên</string>
@@ -22,4 +26,11 @@
     <string name="msg_confimpassword_should_match_password">Xác nhận mật khẩu không trùng với mật khẩu</string>
     <string name="birthday_should_match_dateformat">Ngày sinh không đúng định dạng (dd/MM/yyyy)</string>
     <string name="title_activity_update">UpdateActivity</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="title_activity_course">CourseActivity</string>
+    <string name="str_enter_code_course">Hãy nhập mã của khóa học</string>
+    <string name="str_enroll">Tham gia</string>
+    <string name="title_activity_chatlog">ChatlogActivity</string>
+    <string name="str_send">Gửi</string>
+    <string name="str_check_your_email" >Kiểm tra email của bạn!</string>
 </resources>
